--- a/views/m_bonus.ejs
+++ b/views/m_bonus.ejs
@@ -36,7 +36,7 @@
               到期
             </p>
           </div>
-          <a href="#">
+          <a href="/activityboard">
             <span class="btn btn-vg-reg btn-vg-secondary">
             獲得更多點數
             </span>
