--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -34,18 +34,18 @@
                     <span>✤ 編號: 503835</span>
                     <span>2023-9-15</span>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 pimg">
                     <img src="img/中秋箱.png" alt="">
                   </div>
                   <div class="col-4">
-                    <p>商品品項: 中秋箱</p>
+                    <p>品項: 中秋箱</p>
                     <p>份量: 2-3人</p>
                     <p>數量: 1</p>
                   </div>
-                  <div class="col-2 text-center">
+                  <div class="col-2">
                     <p>單次配送</p>
                   </div>
-                  <div class="col-3 order-button">
+                  <div class="col-3 order-button1">
                     <a href="/rateorder"><button class="btn">訂單評價</button></a>
                     <button class="btn">聯絡客服</button>
                     <!-- <button class="btn btn-vg-redborder">延後配送</button> -->
@@ -62,7 +62,7 @@
                     <span>訂單狀態: 配送中</span>
                   </div>
                   <div class="col-2 total">
-                    <span>$500</span>
+                    <span>$2400</span>
                   </div>
                 </li>
               </ul>
@@ -76,18 +76,18 @@
                     <span>✤ 編號: 4100234</span>
                     <span>2023-8-10</span>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 pimg">
                     <img src="img/蔬果健康箱.png" alt="">
                   </div>
                   <div class="col-4">
-                    <p>商品品項: 蔬果健康箱</p>
+                    <p>品項: 蔬果健康箱</p>
                     <p>份量: 1-2人</p>
                     <p>數量: 1</p>
                   </div>
                   <div class="col-2">
-                    <p>每周配送</p>
+                    <p>每周配送(30天)</p>
                   </div>
-                  <div class="col-3 order-button">
+                  <div class="col-3 order-button2">
                     <button class="btn">追蹤狀態</button>
                     <button class="btn">聯絡客服</button>
                     <button class="btn btn-vg-redborder">延後配送</button>
