--- a/views/product.ejs
+++ b/views/product.ejs
@@ -91,7 +91,9 @@
                   </div>
                   <h5 class="vg-h5">運送頻率:</h5>
                   <p class="vg-p">
-                    基本每周一次 ➞ 一期四箱
+                    30day每周一次 、 60day雙周一次
+                    <br />
+                    <span class="text-danger"> 一期四箱、隔週開始配送</span>
                     <br />
                     訂購期 30 天 <br />(需於45天內配送完畢&含延後2次)
                   </p>
@@ -250,10 +252,11 @@
                   </div>
                   <h5 class="vg-h5">運送頻率:</h5>
                   <p class="vg-p">
-                    每周一次 ➞ 一期四箱
+                    30day每周一次 、 60day雙周一次
                     <br />
-                    訂購期 30 天 <br />
-                    (需於45天內配送完畢&含延後2次)
+                    <span class="text-danger">一期四箱、隔週開始配送</span>
+                    <br />
+                    訂購期 30 天 <br />(需於45天內配送完畢&含延後2次)
                   </p>
                   <p class="vg-p">
                     訂購期 60 天<br />
