0927 芳目前的進度

--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -32,7 +32,7 @@
                 <li class="list-group-item col-12 row">
                   <div class="col-12 d-flex justify-content-between">
                     <span>✤ 編號: 503835</span>
-                    <span>2023-9-15</span>
+                    <span>2023-9-10 17:08</span>
                   </div>
                   <div class="col-3 pimg">
                     <img src="img/中秋箱.png" alt="">
@@ -59,7 +59,7 @@
                   </a>
     
                   <div class="col-10">
-                    <span>訂單狀態: 配送中</span>
+                    <span>訂單狀態: 已完成</span>
                   </div>
                   <div class="col-2 total">
                     <span>$2400</span>
@@ -73,15 +73,15 @@
     
                 <li class="list-group-item col-12 row">
                   <div class="col-12 d-flex justify-content-between">
-                    <span>✤ 編號: 4100234</span>
-                    <span>2023-8-10</span>
+                    <span>✤ 編號: 3490516</span>
+                    <span>22023-09-18 4:01</span>
                   </div>
                   <div class="col-3 pimg">
-                    <img src="img/蔬果健康箱.png" alt="">
+                    <img src="img/自選蔬果箱.png" alt="">
                   </div>
                   <div class="col-4">
-                    <p>品項: 蔬果健康箱</p>
-                    <p>份量: 1-2人</p>
+                    <p>品項: 自選蔬果箱</p>
+                    <p>份量: 雙人箱(1-2)</p>
                     <p>數量: 1</p>
                   </div>
                   <div class="col-2">
@@ -104,7 +104,7 @@
                     <span>訂單狀態: 配送中</span>
                   </div>
                   <div class="col-2 total">
-                    <span>$1700</span>
+                    <span>$400</span>
                   </div>
                 </li>
               </ul>
