--- a/views/m_article.ejs
+++ b/views/m_article.ejs
@@ -28,8 +28,8 @@
     
         <% for(var i = 0; i < datarticle.length; i++) { %>
           <div class="article-card card mb-3">
-            <a href="#">
-            <!-- <a href="/blog/inside/<%= datarticle[i].atcid %>"> -->
+            <!-- <a href="#"> -->
+            <a href="/blog/inside/<%= datarticle[i].atcid %>">
               <div class="row g-0">
                 <div class="article-img col-4">
                   <img src="<%= datarticle[i].atcimg %>" alt="...">
