HH 配合測試進行修正

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -39,7 +39,7 @@
                                     <tr>
                                         <th>品項</th>
                                         <th>規格</th>
-                                        <th class="vg-href" onclick="cnotemodal()">備註<i
+                                        <th class="vg-href w-25" onclick="cnotemodal()">備註<i
                                                 class="mx-1 fa-solid fa-circle-info"></i>
                                         </th>
                                     </tr>
