依照錄製影片需求進行調整

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -205,7 +205,7 @@
                         <div>
                             <h4 class="vg-h4 mt-3">熱門文章</h4>
                             <div class="hotArt">
-                                <div class="d-flex mt-3">
+                                <div class="d-flex mt-3 flex-column">
                                     <img src="https://cw1.tw/CH/images/channel_master/5a5a6829-34f5-4463-b486-e5a116f1caa8.jpg"
                                         alt="">
                                     <div class="hotArtcontent" onclick="window.open(`/blog/inside/2`,'_self')" ;>
