--- a/lib/css/blog.css
+++ b/lib/css/blog.css
@@ -360,8 +360,9 @@ padding-left: 50px;
 }
 
 .hotArt>div>img {
+    display: none;
     height: 108px;
-    width: 150px;
+    width: 100px;
     object-fit: cover;
 }
 
@@ -529,6 +530,7 @@ padding-left: 50px;
     border: 4px solid rgba(0, 0, 0, 0.75);
     cursor: pointer;
     user-select: none;
+    margin-top: 90px;
 }
 
 .lottoContainer>.spinBtn::before {
@@ -553,6 +555,7 @@ padding-left: 50px;
     box-shadow: 0 0 0 5px #333,
         0 0 0 15px #fff,
         0 0 0 18px #111;
+    margin-top: 50px;
     /* transition: transform 5s ease-in-out; */
 }
 
