開啟查看訂單提交評價按鈕

--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -154,8 +154,8 @@
                                 </div>
                             </div>
                             <div class="modal-footer mx-auto">
-                                <!-- <button type="button" class="btn btn-warning" data-dismiss="modal"
-                                    id="rateOrder">評價訂單</button> -->
+                                <button type="button" class="btn btn-warning" data-dismiss="modal"
+                                    id="rateOrder">評價訂單</button>
                                 <button type="button" class="btn btn-success" id="ordermodalok">確定</button>
                             </div>
                         </div>
