--- a/views/activityboard.ejs
+++ b/views/activityboard.ejs
@@ -55,7 +55,7 @@
                                     <%= data[i].actTitle %>
                                 </h4>
                                 <p class="actviewp mt-3">
-                                    <%= data[i].actText %>
+                                    <%- data[i].actText %>
                                 </p>
                             </div>
                         </div>
