--- a/views/share/head_link.ejs
+++ b/views/share/head_link.ejs
@@ -45,6 +45,13 @@
 <!-- Dayjs -->
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 
+<!-- Momentjs -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+
+<!-- PIGNOSE-Calendar -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pg-calendar@1.4.31/dist/css/pignose.calendar.min.css">
+<script src="https://cdn.jsdelivr.net/npm/pg-calendar@1.4.31/dist/js/pignose.calendar.min.js"></script>
+
 <!-- VG -->
 <link rel="stylesheet" href="css/vg.css" />
 <script src="js/vg.js"></script>
