--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -30,15 +30,15 @@
                 <div>
                   <p>
                     210
-                    <small class="vg-ps"> 可使用的VG點數</small>
+                    <small class="vg-ps exp"> 可使用的VG點數</small>
                   </p>
-                  <p class="vg-ps">
-                    <small class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="期限為您獲得的月份加上一個月的最後一天，請記得於期限前使用完畢!">
-                      2023-10-01 到期
+                  <p class="vg-ps exp">
+                    <small id="exp" class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="期限為您獲得的月份加上一個月的最後一天，請記得於期限前使用完畢!">
+                      2023-10-31 到期
                     </small>
                   </p>
                 </div>
-                <a href="#">
+                <a href="/activityboard">
                   <span class="btn btn-vg-reg btn-vg-secondary">
                   獲得更多點數
                   </span>
